@@ -1,3 +1,9 @@
+mcabber (1.0.3-dev)
+
+ * 
+
+ -- Mikael, ?
+
 mcabber (1.0.2)
 
  * Compatible with Loudmouth >=1.5.3 with SHA256 support (Frank Zschockelt)
